style customization and delete video function

--- a/marketing_wizard/assets/theme-new/css/custom.css
+++ b/marketing_wizard/assets/theme-new/css/custom.css
@@ -1,9 +1,9 @@
 /* Customization */
-/*@media (min-width: 1200px) {
+@media (min-width: 1200px) {
   .container {
       width: 1270px;
   }
-}*/
+}
 
 /* Background color */
 .wrapper-body {
