fix firefox style issue.

--- a/marketing_wizard/assets/theme-new/css/style.css
+++ b/marketing_wizard/assets/theme-new/css/style.css
@@ -8651,7 +8651,9 @@ table.video-page.dataTable thead tr th,table.video-page.dataTable tbody tr td{
   width: 100%;
   bottom: 0;
 }
-
+tr.search-result td.meta{
+  margin-bottom: 20px;
+}
 
 
 
