update api integration and ui change

--- a/marketing_wizard/public/assets/theme-new/css/plugins/steps/jquery.steps.css
+++ b/marketing_wizard/public/assets/theme-new/css/plugins/steps/jquery.steps.css
@@ -171,6 +171,14 @@
 {
     list-style: disc !important;
 }
+.wizard > .content > .body ul.pagination
+{
+    list-style: none !important;
+}
+.wizard > .content > .body ul.pagination li
+{
+    display: inline-block;
+}
 
 .wizard > .content > .body ul > li
 {
