--- a/marketing_wizard/public/assets/theme-new/css/style.css
+++ b/marketing_wizard/public/assets/theme-new/css/style.css
@@ -4711,7 +4711,7 @@ ul.notes li div {
 }
 .file .icon,
 .file .image {
-  height: 100px;
+  height: 150px;
   overflow: hidden;
 }
 .file .icon {
@@ -8189,11 +8189,11 @@ body.md-skin {
 .create_video_wizard > .wizard > .steps .disabled a {
   background: none;
 }
-.create_video_wizard > .wizard > .steps .current a {
+/*.create_video_wizard > .wizard > .steps .current a {
   background: none;
   border-color: #6d6ab7;
   color: #6d6ab7;
-}
+}*/
 .create_video_wizard > .wizard > .steps .done a {
   background: none;
   border-color: #8f8cc8;
@@ -8210,6 +8210,15 @@ body.md-skin {
   padding: 0px;
   background-color: #f8f8f8;
   border-top: 0px;
+  font-size: 16px;
+}
+.file-box .file div.choose-template {
+  cursor: pointer;
+}
+.file-box .file .description .file-name a i{
+  font-size: 25px;
+  margin-left: 15px;
+  vertical-align: middle;
 }
 .file-box .file .description {
   padding: 10px;
@@ -8220,6 +8229,36 @@ body.md-skin {
   position: absolute;
   top: 0;
   background-color: #74a510;
+  color: #fff;
+  text-align: center;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  align-items: center;
+  -webkit-transform: rotate3d(0, 0, 1, 45deg);
+  -khtml-transform: rotate3d(0, 0, 1, 45deg);
+  -moz-transform: rotate3d(0, 0, 1, 45deg);
+  -ms-transform: rotate3d(0, 0, 1, 45deg);
+  -o-transform: rotate3d(0, 0, 1, 45deg);
+  transform: rotate3d(0, 0, 1, 45deg);
+  padding: 0 31px 0 70px;
+  z-index: 10;
+  -webkit-transform-origin: bottom;
+  -khtml-transform-origin: bottom;
+  -moz-transform-origin: bottom;
+  -ms-transform-origin: bottom;
+  -o-transform-origin: bottom;
+  transform-origin: bottom;
+  right: -34px;
+  font-size: 14px;
+  text-transform: uppercase;
+}
+.file-box .file .template-selected {
+  position: absolute;
+  top: 0;
+  background-color: red;
   color: #fff;
   text-align: center;
   display: flex;
@@ -8660,3 +8699,26 @@ body .cropper-invisible{
 
 
 
+.step-content ul.pagination{
+  display: inline-block;
+  margin-left: 15px;
+}    
+
+#create_video_previewbox {
+  position: relative;
+  padding-bottom: 56.5%;
+  height: 0;
+  overflow: hidden;
+  border: none;
+}
+
+#create_video_previewbox iframe,
+#create_video_previewbox object,
+#create_video_previewbox embed,
+#create_video_previewbox video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
